[package]
version = "0.5.1"
name = "ultraplonk-no-std"
authors = ["Horizen Labs <admin@horizenlabs.io>", "Lucas Bispo de Oliveira <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/ultraplonk_verifier"
keywords = ["cryptography", "elliptic-curves", "pairing", "zk-SNARKs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false, tag = "v0.6.0" }
ark-models-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false, tag = "v0.6.0" }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
hex-literal = { version = "1.1.0", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
snafu = { version = "0.8.3", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }

# js
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = { version = "0.19.0", default-features = false }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "hex"]


[lib]
crate-type = ["cdylib", "rlib"]
